Improvements for Fastacmd, RepeatScan and ShellDelegatingBlat and AffyPowerToolsProbesetSummarize
Improve usages of the Process API:

 - use waitFor() with a timeout instead of Thread.sleep()
 - replace GenericStreamConsumer and GenericParsingConsumer with
   ProcessBuider and appropriate stream redirections
 - always specify arguments as an array of strings.
 - always pipe the standard error and include it in the exception
   message

Replace File with Path.

Eliminate native BLAT. It is unused and if we ever want to add it back,
it will have to be updated anyway.